--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -13,11 +13,11 @@
         <h3>Калькулятор:</h3>
         <p>Введите число <input id="A"></p>
         <p>Введите число <input id="B"></p>
-            <a class="btn btn-primary" onclick="addition()">Сложить</a>
-            <a class="btn btn-primary" onclick="subtraction()">Вычесть</a>
-            <a class="btn btn-primary" onclick="multiply()">Умножить</a>
-            <a class="btn btn-primary" onclick="divide()">Делить</a>
-             <p>Ответ:</p>
+            <a class="btn btn-primary" id="addition" onclick="calculate(addition)">Сложить</a>
+            <a class="btn btn-primary" id="subtraction" onclick="calculate(subtraction)">Вычесть</a>
+            <a class="btn btn-primary" id="multiply" onclick="calculate(multiply)">Умножить</a>
+            <a class="btn btn-primary" id="divide" onclick="calculate(divide)">Делить</a>
+        <p>Ответ:</p>
         <div class="answer"></div>
         </form>
     </div>
